syntax = "proto3";

package pb;

import "transaction.proto";

option go_package = "github.com/jakub/aioportal/server/pb";

message ListTransactionsRequest {
  int32 limit = 1;
  int32 offset = 2;
}

message ListTransactionsResponse {
  int64 total = 1;
  repeated Transaction transactions  = 2;
}